# obsidian-mcp

./: .env.example  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml  pr.yml
indexer/: chunker.py  embedder.py  main.py  runner.py  store.py  watcher.py
obsidian-mcp/: embedding.py  server.py  utils.py
obsidian-mcp/tools/: notes.py  search.py
scripts/: configure_claude.py
shared/: config.py  embedding.py  qdrant_pool.py
tests/: conftest.py  test_chunker.py  test_config.py  test_embedding.py  test_qdrant_pool.py  test_runner.py  test_store.py  test_watcher.py
