[project]
name = "obsidian-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # shared
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
    "qdrant-client>=1.9.0",
    "httpx>=0.27.0",
    # embeddings
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
]

[dependency-groups]
mcp = [
    "mcp[cli]>=1.2.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
    "watchdog>=4.0.0",
]
indexer = [
    "watchdog>=4.0.0",
]
